--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ node_modules
 
 # .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 
 # build output
 .next/
