--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
+    "eslint-config-next": "^15.3.4",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.1",
