--- a/package.json
+++ b/package.json
@@ -37,8 +37,13 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.0",
     "@eslint/js": "^9.9.0",
     "@playwright/test": "^1.53.1",
+    "@storybook/addon-a11y": "^9.0.10",
+    "@storybook/addon-docs": "^9.0.10",
+    "@storybook/addon-vitest": "^9.0.10",
+    "@storybook/nextjs": "^9.0.10",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -50,12 +55,13 @@
     "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
-    "eslint-config-next": "^15.3.4",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-storybook": "^9.0.10",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.1",
     "jest-environment-jsdom": "^30.0.0",
     "postcss": "^8.4.47",
+    "storybook": "^9.0.10",
     "tailwindcss": "^3.4.11",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
