--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.1",
     "jest-environment-jsdom": "^30.0.2",
