--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,10 +7,8 @@ services:
       dockerfile: Dockerfile
       target: ${BUILD_TARGET:-production}
     ports:
-      - "${HOST_PORT:-3001}:${PORT:-3001}"  # dynamic host:container port
+      - "${HOST_PORT:-3001}:${PORT:-3001}"  # host:container port mapping
     environment:
       - NODE_ENV=${NODE_ENV:-production}
       - PORT=${PORT:-3001}
-    env_file:
-      - .env  # override using --env-file during deployment
     restart: unless-stopped
