--- a/.env.local
+++ b/.env.local
@@ -8,5 +8,5 @@ HOST_PORT=3000
 BUILD_TARGET=development
 
 SITE_URL= 'https://aapkepaas.eboxtenants.com'
-NEXT_PUBLIC_API_URL=http://192.168.0.87:3000/api/v1
-NEXT_PUBLIC_IMAGE_URL=http://192.168.0.87:3000/uploads/
+NEXT_PUBLIC_API_URL=https://staging-api.eboxtenders.com/api/v1
+NEXT_PUBLIC_IMAGE_URL=https://staging-api.eboxtenders.com/uploads/
