--- a/.env.local
+++ b/.env.local
@@ -7,5 +7,5 @@ HOST_PORT=3000
 # Docker build stage to use
 BUILD_TARGET=development
 SITE_URL= 'http://192.168.0.87:3001'
-NEXT_PUBLIC_API_URL=http://192.168.0.87:3010/api/v1
-NEXT_PUBLIC_IMAGE_URL=http://192.168.0.87:3010/uploads/
+NEXT_PUBLIC_API_URL=https://staging-api.eboxtenders.com/api/v1
+NEXT_PUBLIC_IMAGE_URL=https://staging-api.eboxtenders.com/uploads/
