static page changes

--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,6 @@ PORT=3000
 HOST_PORT=3000
 # Docker build stage to use
 BUILD_TARGET=development
-SITE_URL= 'http://192.168.0.87:3001'
-NEXT_PUBLIC_API_URL=http://192.168.0.87:3005/api/v1
-NEXT_PUBLIC_IMAGE_URL=http://192.168.0.87:3005/uploads/
+SITE_URL= 'https://newstaging.eboxtenders.com'
+NEXT_PUBLIC_API_URL=https://staging-api.eboxtenders.com/api/v1
+NEXT_PUBLIC_IMAGE_URL=https://staging-api.eboxtenders.com/uploads/
